Add domain and application skeleton